Payment stale-PROCESSING recovery sweeper